package core;

public enum SortConfiguration {
    /**
     * Sort by Date.
     */
    DATE,
    /**
     * Sort by Duration.
     */
    DURATION,
    /**
     * Sort by Title.
     */
    TITLE
}
