package core;

public interface Subcategory {
    /**
     * Get the Subcategory value of a String.
     *
     * @param name The name of the Subcategory to retrieve
     * @return the Subcategory represented by the String
     */
    Subcategory getValueOf(String name);
}
