package restapi;

import org.springframework.web.bind.annotation.RestController;

@RestController
public class GetfitController {

}